--- a/Task--1.ipynb
+++ b/Task--1.ipynb
@@ -19,7 +19,7 @@
         "id": "F1D0C8ep7ytc"
       },
       "source": [
-        "**Name** - ***Rahul Kumar Patra***\r\n",
+        "**Name** - ***Shipra Sethi***\r\n",
         "\r\n",
         "**GRIPS@ THE SPARKS FOUNDATION**\r\n",
         "\r\n",
