--- a/Task-2.ipynb
+++ b/Task-2.ipynb
@@ -30,7 +30,7 @@
         "id": "qpIQuMUBV68T"
       },
       "source": [
-        "**Name - RAHUL KUMAR PATRA**\r\n",
+        "**Name - Shipra Sethi**\r\n",
         "\r\n",
         "**GRIPS@ THE SPARKS FOUNDATION**\r\n",
         "\r\n",
